[Hrushikesh] Added:swagger and testing for book api's
