# BookStore/src/routes/book.route.js
@@ -1,16 +1,19 @@
 import express from 'express';
 import * as BooksController from "../controllers/book.controller"
-import { checkRole, userAuth } from '../middlewares/auth.middleware';
+import { checkRole,userLoginAuth } from '../middlewares/auth.middleware';
 
 const router = express.Router();
 
 
-router.get('', userAuth, BooksController.getAllbooks);
+router.get('', userLoginAuth, BooksController.getAllbooks);
 
 
-router.get('/:_id',userAuth,BooksController.getBookById);
+router.get('/:_id',userLoginAuth,BooksController.getBookById);
 
 
-router.delete('/:_id',userAuth, checkRole, BooksController.deleteBookById)
+router.put('/:_id',userLoginAuth, checkRole, BooksController.updateBookById);
+
+
+router.delete('/:_id',userLoginAuth, checkRole, BooksController.deleteBookById);
 
 export default router;
